--- a/musk.css
+++ b/musk.css
@@ -1,6 +1,7 @@
 nav a{
 	float: right;
 	margin-right: 10px;
+	border-right: black solid 1px
 }
 h1{
 	color: red ;
@@ -34,4 +35,24 @@ section h3{
 }
 section p{
 	color: blue;
+}
+.box #Awards li:nth-child(even){
+
+ color: blue;
+
+}
+.box #Awards li:nth-child(odd){
+
+ color: red;
+
+}
+#PopMedia li:nth-child(even){
+
+ color: blue;
+
+}
+#PopMedia li:nth-child(odd){
+
+ color: red;
+
 }
